Fixed broken styles, unified skills badge code (showBadge()), added user role names to discussions.

--- a/style-main.less
+++ b/style-main.less
@@ -886,46 +886,54 @@ header#pagination{
 .skill.badge:hover h4, .skill.badge:hover hr, .skill-activity:hover h4, .skill-activity:hover hr {
 	opacity: 1;
 }
+/*
 .water{
 	.skill.badge{ .skill-badge-background(@blue); }
 	.skill.badge:nth-child(3n-1){ .skill-badge-background(@blue-purple); }
 	.skill.badge:nth-child(4n-1){ .skill-badge-background(@lt-blue); }	
 	.badge_level { color: @blue; }
 }
-.water.skill.badge{ .skill-badge-background(@blue); }
-.water.skill.badge:nth-child(3n-1){ .skill-badge-background(@blue-purple); }
-.water.skill.badge:nth-child(4n-1){ .skill-badge-background(@lt-blue); }	
-.water.badge_level { color: @blue; }
+*/
+.water .skill.badge{ .skill-badge-background(@blue); }
+.water:nth-of-type(3n-1) .skill.badge{ .skill-badge-background(@blue-purple); }
+.water:nth-of-type(3n-2) .skill.badge{ .skill-badge-background(@lt-blue); }	
+.water .badge_level { color: @blue; }
+/*
 .fish{
 	.skill.badge{ .skill-badge-background(@red); }
 	.skill.badge:nth-child(3n-1){ .skill-badge-background(@yellow); }
 	.skill.badge:nth-child(4n-1){ .skill-badge-background(@orange); }	
 	.badge_level { color: @red; }
 }
-.fish.skill.badge{ .skill-badge-background(@red); }
-.fish.skill.badge:nth-child(3n-1){ .skill-badge-background(@yellow); }
-.fish.skill.badge:nth-child(4n-1){ .skill-badge-background(@orange); }	
-.fish.badge_level { color: @red; }
+*/
+.fish .skill.badge{ .skill-badge-background(@red); }
+.fish:nth-of-type(3n-1) .skill.badge{ .skill-badge-background(@yellow); }
+.fish:nth-of-type(3n-2) .skill.badge{ .skill-badge-background(@orange); }	
+.fish .badge_level { color: @red; }
+/*
 .plant{
 	.skill.badge{ .skill-badge-background(@green); }
 	.skill.badge:nth-child(3n-1){ .skill-badge-background(@teal); }
 	.skill.badge:nth-child(4n-1){ .skill-badge-background(@lt-green); }	
 	.badge_level { color: @green; }
 }
-.plant.skill.badge{ .skill-badge-background(@green); }
-.plant.skill.badge:nth-child(3n-1){ .skill-badge-background(@teal); }
-.plant.skill.badge:nth-child(4n-1){ .skill-badge-background(@lt-green); }	
-.plant.badge_level { color: @green; }
+*/
+.plant .skill.badge{ .skill-badge-background(@green); }
+.plant:nth-of-type(3n-1) .skill.badge{ .skill-badge-background(@teal); }
+.plant:nth-of-type(3n-1) .skill.badge{ .skill-badge-background(@lt-green); }	
+.plant .badge_level { color: @green; }
+/*
 .design-build{
 	.skill.badge{ .skill-badge-background(@purple); }
 	.skill.badge:nth-child(3n-1){ .skill-badge-background(@fushia); }
 	.skill.badge:nth-child(4n-1){ .skill-badge-background(@medbrown); }	
 	.badge_level { color: @purple; }
 }
-.design-build.skill.badge{ .skill-badge-background(@purple); }
-.design-build.skill.badge:nth-child(3n-1){ .skill-badge-background(@fushia); }
-.design-build.skill.badge:nth-child(4n-1){ .skill-badge-background(@medbrown); }	
-.design-build.badge_level { color: @purple; }
+*/
+.design-build .skill.badge{ .skill-badge-background(@purple); }
+.design-build:nth-of-type(3n-1) .skill.badge{ .skill-badge-background(@fushia); }
+.design-build:nth-of-type(3n-2) .skill.badge{ .skill-badge-background(@medbrown); }	
+.design-build .badge_level { color: @purple; }
 
 
 .badge.incomplete {
@@ -2572,7 +2580,7 @@ section#main.forum{
 
 
 
-.page-profile, single-institution {
+.page-profile, .single-institution {
 
 	section.main {
 		overflow: hidden;
